# geosquare_grid_duckdb

./: .gitmodules  CMakeLists.txt  Makefile  extension_config.cmake  readme.md
.github/workflows/: MainDistributionPipeline.yml
.idx/: dev.nix
docs/: NEXT_README.md  README.md
scripts/: bootstrap-template.py  update_duckdb_version.sh
src/: geosquare_extension.cpp
src/include/: geosquare_extension.hpp  lightweight_geom.hpp
test/: README.md
test/sql/: geosquare.test
v1.4.2/wasm_eh/: geosquare_grid.duckdb_extension.wasm
v1.4.2/wasm_mvp/: geosquare.duckdb_extension.wasm  geosquare_grid.duckdb_extension.wasm
v1.4.2/wasm_threads/: geosquare.duckdb_extension.wasm  geosquare_grid.duckdb_extension.wasm
v1.4.4/wasm_eh/: geosquare_grid.duckdb_extension.wasm
v1.4.4/wasm_mvp/: geosquare_grid.duckdb_extension.wasm
v1.4.4/wasm_threads/: geosquare_grid.duckdb_extension.wasm
